unpackaged/main/default/objects/Opportunity/fields/First_Invoice__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice__c</fullName>
    <label>First Invoice</label>
    <type>Date</type>
</CustomField>