unpackaged/main/default/objects/Opportunity/fields/Fix_Out_Joinery__c.field-meta.xml
<CustomField>
    <fullName>Fix_Out_Joinery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fix Out Joinery offer</description>
    <label>Fix Out Joinery</label>
    <type>Checkbox</type>
</CustomField>