unpackaged/main/default/objects/Opportunity/fields/Fixing_hardware__c.field-meta.xml
<CustomField>
    <fullName>Fixing_hardware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fixing hardware offer</description>
    <label>Fixing hardware</label>
    <type>Checkbox</type>
</CustomField>