unpackaged/main/default/objects/Opportunity/fields/Floor_Beams__c.field-meta.xml
<CustomField>
    <fullName>Floor_Beams__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Beams</label>
    <type>Checkbox</type>
</CustomField>