unpackaged/main/default/objects/Opportunity/fields/Floor_Comparison_Approver__c.field-meta.xml
<CustomField>
    <fullName>Floor_Comparison_Approver__c</fullName>
    <label>Floor Comparison Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daniel Trainer</fullName>
            </value>
            <value>
                <fullName>Richard Harris</fullName>
            </value>
            <value>
                <fullName>Luke Taylor</fullName>
            </value>
            <value>
                <fullName>Wade Kill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>