unpackaged/main/default/objects/Opportunity/fields/Floor_System__c.field-meta.xml
<CustomField>
    <fullName>Floor_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor System</label>
    <type>Checkbox</type>
</CustomField>