unpackaged/main/default/objects/Opportunity/fields/Floor_System_Comments__c.field-meta.xml
<CustomField>
    <fullName>Floor_System_Comments__c</fullName>
    <label>Floor System Comments</label>
    <type>TextArea</type>
</CustomField>