unpackaged/main/default/objects/Opportunity/fields/Floor_Truss_Centres__c.field-meta.xml
<CustomField>
    <fullName>Floor_Truss_Centres__c</fullName>
    <label>Floor Truss Centres</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>