unpackaged/main/default/objects/Opportunity/fields/Floor_Truss_Comments__c.field-meta.xml
<CustomField>
    <fullName>Floor_Truss_Comments__c</fullName>
    <label>Floor Truss Comments</label>
    <type>TextArea</type>
</CustomField>