unpackaged/main/default/objects/Opportunity/fields/Floor_Truss_Depth__c.field-meta.xml
<CustomField>
    <fullName>Floor_Truss_Depth__c</fullName>
    <label>Floor Truss Depth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>260</fullName>
            </value>
            <value>
                <fullName>310</fullName>
            </value>
            <value>
                <fullName>370</fullName>
            </value>
            <value>
                <fullName>420</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>