unpackaged/main/default/objects/Opportunity/fields/Floor_Truss_Depth_Other__c.field-meta.xml
<CustomField>
    <fullName>Floor_Truss_Depth_Other__c</fullName>
    <label>Floor Truss Depth - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>