unpackaged/main/default/objects/Opportunity/fields/Floor_Truss_System_Loose_Materials__c.field-meta.xml
<CustomField>
    <fullName>Floor_Truss_System_Loose_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Truss &amp; System Loose Materials</label>
    <type>Checkbox</type>
</CustomField>