unpackaged/main/default/objects/Opportunity/fields/Floor_Truss_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Truss_Type__c</fullName>
    <label>Floor Truss Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Longreach (Timber Web)</fullName>
            </value>
            <value>
                <fullName>Pryda Span (Metal Web)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>