unpackaged/main/default/objects/Opportunity/fields/Floor_Trusses__c.field-meta.xml
<CustomField>
    <fullName>Floor_Trusses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Trusses</label>
    <type>Checkbox</type>
</CustomField>