unpackaged/main/default/objects/Opportunity/fields/Floor_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Type__c</fullName>
    <label>Floor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>