unpackaged/main/default/objects/Opportunity/fields/Flooring__c.field-meta.xml
<CustomField>
    <fullName>Flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flooring offer</description>
    <inlineHelpText>NSW, VIC &amp; QLD</inlineHelpText>
    <label>Flooring</label>
    <type>Checkbox</type>
</CustomField>