unpackaged/main/default/objects/Opportunity/fields/Flooring_Notes__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Notes__c</fullName>
    <label>Flooring Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>