unpackaged/main/default/objects/Opportunity/fields/Fly_screens_barrier_doors__c.field-meta.xml
<CustomField>
    <fullName>Fly_screens_barrier_doors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fly screens &amp; barrier doors offer</description>
    <label>Fly screens &amp; barrier doors</label>
    <type>Checkbox</type>
</CustomField>