unpackaged/main/default/objects/Opportunity/fields/Form_work__c.field-meta.xml
<CustomField>
    <fullName>Form_work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Form work offer</description>
    <label>Form work</label>
    <type>Checkbox</type>
</CustomField>