unpackaged/main/default/objects/Opportunity/fields/Foundation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Notes__c</fullName>
    <label>Foundation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>