unpackaged/main/default/objects/Opportunity/fields/Foundations__c.field-meta.xml
<CustomField>
    <fullName>Foundations__c</fullName>
    <label>Foundations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>