unpackaged/main/default/objects/Opportunity/fields/Frame_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Frame_Specifications__c</fullName>
    <label>Frame Specifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Australian Standards</fullName>
            </value>
            <value>
                <fullName>To Engineering</fullName>
            </value>
            <value>
                <fullName>Builders Scope of Works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>