unpackaged/main/default/objects/Opportunity/fields/Frame_Truss__c.field-meta.xml
<CustomField>
    <fullName>Frame_Truss__c</fullName>
    <label>Frame &amp; Truss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>As Per Plan - Supplier Quote</fullName>
            </value>
            <value>
                <fullName>As Per Plan - Truss Quote &amp; Random Wall</fullName>
            </value>
            <value>
                <fullName>As Per Plan - Random</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>