unpackaged/main/default/objects/Opportunity/fields/Frame_Truss_Notes__c.field-meta.xml
<CustomField>
    <fullName>Frame_Truss_Notes__c</fullName>
    <label>Frame &amp; Truss Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>