unpackaged/main/default/objects/Opportunity/fields/FrameAndTruss__c.field-meta.xml
<CustomField>
    <fullName>FrameAndTruss__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>VIC</inlineHelpText>
    <label>Frame and Truss</label>
    <type>Checkbox</type>
</CustomField>