unpackaged/main/default/objects/Opportunity/fields/Front_Notes__c.field-meta.xml
<CustomField>
    <fullName>Front_Notes__c</fullName>
    <label>Front Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>