unpackaged/main/default/objects/Opportunity/fields/Front_of_Wall_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Front_of_Wall_Plumbing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front of Wall Plumbing</label>
    <type>Checkbox</type>
</CustomField>