unpackaged/main/default/objects/Opportunity/fields/Fully_Enclosed_or_Open_Front__c.field-meta.xml
<CustomField>
    <fullName>Fully_Enclosed_or_Open_Front__c</fullName>
    <label>Fully Enclosed or Open Front</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Enclosed</fullName>
            </value>
            <value>
                <fullName>Open Front</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>