unpackaged/main/default/objects/Opportunity/fields/Garage_Door__c.field-meta.xml
<CustomField>
    <fullName>Garage_Door__c</fullName>
    <label>Garage Door</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Exterior__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Required</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>