unpackaged/main/default/objects/Opportunity/fields/Garage_Door_Notes__c.field-meta.xml
<CustomField>
    <fullName>Garage_Door_Notes__c</fullName>
    <label>Garage Door Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>