unpackaged/main/default/objects/Opportunity/fields/Garage_doors__c.field-meta.xml
<CustomField>
    <fullName>Garage_doors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Garage doors offer</description>
    <label>Garage doors</label>
    <type>Checkbox</type>
</CustomField>