unpackaged/main/default/objects/Opportunity/fields/Garage_Doors_SI__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_SI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NSW, VIC, QLD &amp; SA</inlineHelpText>
    <label>Garage Doors</label>
    <type>Checkbox</type>
</CustomField>