unpackaged/main/default/objects/Opportunity/fields/Garden_lighting__c.field-meta.xml
<CustomField>
    <fullName>Garden_lighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Garden lighting offer</description>
    <label>Garden lighting</label>
    <type>Checkbox</type>
</CustomField>