unpackaged/main/default/objects/Opportunity/fields/GF_LB__c.field-meta.xml
<CustomField>
    <fullName>GF_LB__c</fullName>
    <label>GF LB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>