unpackaged/main/default/objects/Opportunity/fields/Gib_Cove_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gib_Cove_Notes__c</fullName>
    <label>Gib Cove Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>