unpackaged/main/default/objects/Opportunity/fields/Girder_Locations__c.field-meta.xml
<CustomField>
    <fullName>Girder_Locations__c</fullName>
    <label>Girder Locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Engineering</fullName>
            </value>
            <value>
                <fullName>Follow Layout</fullName>
            </value>
            <value>
                <fullName>No Girder to Garage Lintel</fullName>
            </value>
            <value>
                <fullName>Best Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>