unpackaged/main/default/objects/Opportunity/fields/Hard_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hard_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual Hard Copy</description>
    <label>Hard Copy</label>
    <type>Checkbox</type>
</CustomField>