unpackaged/main/default/objects/Opportunity/fields/Heating_cooling_rough_in__c.field-meta.xml
<CustomField>
    <fullName>Heating_cooling_rough_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Heating &amp; cooling rough in offer</description>
    <label>Heating &amp; cooling rough in</label>
    <type>Checkbox</type>
</CustomField>