unpackaged/main/default/objects/Opportunity/fields/Height_to_Back__c.field-meta.xml
<CustomField>
    <fullName>Height_to_Back__c</fullName>
    <label>Height to Back</label>
    <length>255</length>
    <type>Text</type>
</CustomField>