unpackaged/main/default/objects/Opportunity/fields/Height_to_Front__c.field-meta.xml
<CustomField>
    <fullName>Height_to_Front__c</fullName>
    <label>Height to Front</label>
    <length>255</length>
    <type>Text</type>
</CustomField>