unpackaged/main/default/objects/Opportunity/fields/Height_to_Middle__c.field-meta.xml
<CustomField>
    <fullName>Height_to_Middle__c</fullName>
    <label>Height to Middle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>