unpackaged/main/default/objects/Opportunity/fields/Hot_Water__c.field-meta.xml
<CustomField>
    <fullName>Hot_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Water</label>
    <type>Checkbox</type>
</CustomField>