unpackaged/main/default/objects/Opportunity/fields/Hot_water_service__c.field-meta.xml
<CustomField>
    <fullName>Hot_water_service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hot water service offer</description>
    <label>Hot water service</label>
    <type>Checkbox</type>
</CustomField>