unpackaged/main/default/objects/Opportunity/fields/House_Type__c.field-meta.xml
<CustomField>
    <fullName>House_Type__c</fullName>
    <label>House Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Semi Detached Townhouse</fullName>
            </value>
            <value>
                <fullName>Low Rise Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>