unpackaged/main/default/objects/Opportunity/fields/Hydrapanel__c.field-meta.xml
<CustomField>
    <fullName>Hydrapanel__c</fullName>
    <label>Hydrapanel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BTI__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>