unpackaged/main/default/objects/Opportunity/fields/Hydrapanel_Location__c.field-meta.xml
<CustomField>
    <fullName>Hydrapanel_Location__c</fullName>
    <label>Hydrapanel Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>