unpackaged/main/default/objects/Opportunity/fields/Installation_Required__c.field-meta.xml
<CustomField>
    <fullName>Installation_Required__c</fullName>
    <label>Installation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply &amp; Install</fullName>
            </value>
            <value>
                <fullName>Supply ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>