unpackaged/main/default/objects/Opportunity/fields/Insulation__c.field-meta.xml
<CustomField>
    <fullName>Insulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Insulation offer</description>
    <inlineHelpText>National Metro</inlineHelpText>
    <label>Insulation Only</label>
    <type>Checkbox</type>
</CustomField>