unpackaged/main/default/objects/Opportunity/fields/Insulation_As_Per_Plan__c.field-meta.xml
<CustomField>
    <fullName>Insulation_As_Per_Plan__c</fullName>
    <label>Insulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
                <label>As Per Plan - Bales</label>
            </value>
            <value>
                <fullName>As Per Plan - Supplier Quote</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>