unpackaged/main/default/objects/Opportunity/fields/Insulation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Notes__c</fullName>
    <label>Insulation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>