unpackaged/main/default/objects/Opportunity/fields/Insulation_Type__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Type__c</fullName>
    <label>Insulation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Insulation_As_Per_Plan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Earthwool</fullName>
            </value>
            <value>
                <fullName>Greenstuff</fullName>
            </value>
            <value>
                <fullName>Mammoth</fullName>
            </value>
            <value>
                <fullName>Expol</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>