unpackaged/main/default/objects/Opportunity/fields/Insulation_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Type_Notes__c</fullName>
    <label>Insulation Type Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>