unpackaged/main/default/objects/Opportunity/fields/Interior_Finishings__c.field-meta.xml
<CustomField>
    <fullName>Interior_Finishings__c</fullName>
    <label>Interior Finishings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required - Specify</fullName>
            </value>
            <value>
                <fullName>As Per Default Template</fullName>
                <default>true</default>
                <label>As Per Default Template</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>