unpackaged/main/default/objects/Opportunity/fields/Interior_Finishings_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interior_Finishings_Notes__c</fullName>
    <label>Interior Finishings Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>