unpackaged/main/default/objects/Opportunity/fields/Interior_Lining__c.field-meta.xml
<CustomField>
    <fullName>Interior_Lining__c</fullName>
    <label>Interior Lining</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Required - Different to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>