unpackaged/main/default/objects/Opportunity/fields/Interior_Lining_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interior_Lining_Notes__c</fullName>
    <label>Interior Lining Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>