unpackaged/main/default/objects/Opportunity/fields/Internal_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval_Received__c</fullName>
    <label>Internal Approval Received</label>
    <type>Date</type>
</CustomField>