unpackaged/main/default/objects/Opportunity/fields/Internal_door_furniture__c.field-meta.xml
<CustomField>
    <fullName>Internal_door_furniture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal door furniture offer</description>
    <label>Internal door furniture</label>
    <type>Checkbox</type>
</CustomField>