unpackaged/main/default/objects/Opportunity/fields/Internal_doors__c.field-meta.xml
<CustomField>
    <fullName>Internal_doors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal doors offer</description>
    <label>Internal doors</label>
    <type>Checkbox</type>
</CustomField>