unpackaged/main/default/objects/Opportunity/fields/Internal_Dry_Areas__c.field-meta.xml
<CustomField>
    <fullName>Internal_Dry_Areas__c</fullName>
    <label>Internal Dry Areas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3600x900x19mm Y/T Flooring</fullName>
            </value>
            <value>
                <fullName>3600x900x22mm Red Tongue</fullName>
            </value>
            <value>
                <fullName>3600x900x19mm Termiflor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>