unpackaged/main/default/objects/Opportunity/fields/Internal_lockup_materials__c.field-meta.xml
<CustomField>
    <fullName>Internal_lockup_materials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal lockup materials offer</description>
    <label>Internal lockup materials</label>
    <type>Checkbox</type>
</CustomField>