unpackaged/main/default/objects/Opportunity/fields/Internal_stairs__c.field-meta.xml
<CustomField>
    <fullName>Internal_stairs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal stairs offer</description>
    <label>Internal stairs</label>
    <type>Checkbox</type>
</CustomField>