unpackaged/main/default/objects/Opportunity/fields/Internal_Wet_Area_Coverings__c.field-meta.xml
<CustomField>
    <fullName>Internal_Wet_Area_Coverings__c</fullName>
    <label>Internal Wet Area Coverings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3600x900x19mm Y/T Flooring</fullName>
            </value>
            <value>
                <fullName>3600x900x22mm Red Tongue</fullName>
            </value>
            <value>
                <fullName>3600x900x19mm Termiflor</fullName>
            </value>
            <value>
                <fullName>2700x600x19mm Scyon</fullName>
            </value>
            <value>
                <fullName>2700x600x22mm Scyon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>