unpackaged/main/default/objects/Opportunity/fields/Irrigation__c.field-meta.xml
<CustomField>
    <fullName>Irrigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Irrigation offer</description>
    <label>Irrigation</label>
    <type>Checkbox</type>
</CustomField>