unpackaged/main/default/objects/Opportunity/fields/Items_Ready_for_Collection__c.field-meta.xml
<CustomField>
    <fullName>Items_Ready_for_Collection__c</fullName>
    <label>Items Ready for Collection</label>
    <type>Date</type>
</CustomField>