unpackaged/main/default/objects/Opportunity/fields/Jambs_Type__c.field-meta.xml
<CustomField>
    <fullName>Jambs_Type__c</fullName>
    <label>Jambs Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interior_Doors__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pine Flat</fullName>
            </value>
            <value>
                <fullName>Pine Groove</fullName>
            </value>
            <value>
                <fullName>MDF Flat</fullName>
            </value>
            <value>
                <fullName>MDF Groove</fullName>
            </value>
            <value>
                <fullName>2-pc Jamb</fullName>
            </value>
            <value>
                <fullName>Other - Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>