unpackaged/main/default/objects/Opportunity/fields/Jambs_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Jambs_Type_Notes__c</fullName>
    <label>Jambs Type Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>