unpackaged/main/default/objects/Opportunity/fields/Joinery__c.field-meta.xml
<CustomField>
    <fullName>Joinery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Joinery offer</description>
    <inlineHelpText>Live jobs only. NSW, VIC, QLD &amp; SA</inlineHelpText>
    <label>Joinery</label>
    <type>Checkbox</type>
</CustomField>