unpackaged/main/default/objects/Opportunity/fields/Joist_Centres__c.field-meta.xml
<CustomField>
    <fullName>Joist_Centres__c</fullName>
    <label>Joist Centres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>450c (Default)</fullName>
            </value>
            <value>
                <fullName>600c</fullName>
            </value>
            <value>
                <fullName>450c</fullName>
                <isActive>false</isActive>
                <label>450c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>